fixing side nav dot sizing on mobile

--- a/portfolio/static/styles/main.scss
+++ b/portfolio/static/styles/main.scss
@@ -72,8 +72,12 @@ h1, h2, h3, h4, h5, h6, p {
 
 .dot {
     display: block;
-    width: 1.2rem;
-    margin: 0.45rem 0rem;
+    width: 0.8rem;
+    margin: 0.3rem 0rem;
+    @media (min-width: $--WIDTH-tablet) {
+        width: 1.2rem;
+        margin: 0.45rem 0rem;
+    }
 }
 
 .mark-tag {
